--- a/header.html
+++ b/header.html
@@ -14,9 +14,9 @@
     />
 </head>
 	<!-- My CSS -->
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 
-	<title>AdminHub</title>
+	<title>  إدارة المستودع</title>
 </head>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
  
