--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="/css/alert.css">
+<link rel="stylesheet" href="css/alert.css">
 <!-- HEADER -->
 <div id="header-placeholder"></div>
 <script>
@@ -65,11 +65,11 @@
 					<h1>>لوحة التحكم </h1>
 					<ul class="breadcrumb">
 						<li>
-							<a href="/#">لوحة التحكم </a>
+							<a href="#">لوحة التحكم </a>
 						</li>
 						<li><i class='bx bx-chevron-right' ></i></li>
 						<li>
-							<a class="active" href="/#">الرئيسية</a>
+							<a class="active" href="#">الرئيسية</a>
 						</li>
 					</ul>
 				</div>
@@ -144,7 +144,7 @@
 				<!-- <div class="todo">
 					<div class="head">
 						<h3>الادوية</h3>
-						<a href="/medicine/addMedicine.html">	<i class='bx bx-plus' ></i></a>
+						<a href="medicine/addMedicine.html">	<i class='bx bx-plus' ></i></a>
 					
 						 
 					</div>
@@ -160,6 +160,6 @@
 	<!-- CONTENT -->
 	 
 	<script src="js/script.js"></script>
-	<script src="/js/home/home.js"></script>
+	<script src="js/home/home.js"></script>
 </body>
 </html>
