--- a/nav.html
+++ b/nav.html
@@ -10,10 +10,10 @@
             <i class='bx bxs-bell' ></i>
             <span class="num">8</span>
         </a> -->
-        <a href="/prof.html" class="profile">
-            <img src="/img/people.png" id="admin-img">
+        <a href="prof.html" class="profile">
+            <img src="img/people.png" id="admin-img">
         </a>
     </nav>
     <!-- NAVBAR -->
  
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
