--- a/sidebar.html
+++ b/sidebar.html
@@ -8,20 +8,20 @@
     </a>
     <ul class="side-menu top">
         <li class="active" >
-            <a href="/index.html">
+            <a href="index.html">
                 <i class='bx bxs-dashboard' ></i>
                 <span class="text">لوحة التحكم </span>
             </a>
         </li>
         
         <li>
-            <a href="/medicine/proj.html">
+            <a href="medicine/proj.html">
                 <i class='bx bx-donate-blood'></i>
                 <span class="text">الادوية</span>
             </a>
         </li>
         <li>
-            <a href="/employee/request.html">
+            <a href="employee/request.html">
                 <i class='bx bxs-message-dots' ></i>
                 <span class="text">الطلبات </span>
             </a>
@@ -31,13 +31,13 @@
     <ul class="side-menu">
        
         <li>
-            <a href="/prof.html">
+            <a href="prof.html">
                 <i class='bx bxs-cog' ></i>
                 <span class="text">الملف الشخصي</span>
             </a>
         </li>
         <li>
-            <a href="/account/loginInside.html" class="logout">
+            <a href="account/loginInside.html" class="logout">
                 <i class='bx bxs-log-out-circle' ></i>
                 <span class="text">تسجيل الخروج</span>
             </a>
@@ -46,4 +46,4 @@
  
  
  
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
