--- a/header.html
+++ b/header.html
@@ -14,9 +14,9 @@
     />
 </head>
 	<!-- My CSS -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="public/css/style.css">
 
 	<title>  إدارة المستودع</title>
 </head>
-<script src="js/script.js"></script>
+<script src="public/js/script.js"></script>
  
