--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="css/alert.css">
+<link rel="stylesheet" href="public/css/alert.css">
 <!-- HEADER -->
 <div id="header-placeholder"></div>
 <script>
@@ -159,7 +159,7 @@
 	</section>
 	<!-- CONTENT -->
 	 
-	<script src="js/script.js"></script>
-	<script src="js/home/home.js"></script>
+	<script src="public/js/script.js"></script>
+	<script src="public/js/home/home.js"></script>
 </body>
 </html>
