--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
  
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/alert.css">
+    <link rel="stylesheet" href="public/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="public/css/all.min.css" />
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="public/css/alert.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet" />
@@ -74,15 +74,15 @@
 
 
   </body>
-<script src="js/account/login.js"></script>
+<script src="public/js/account/login.js"></script>
 <script>
  
 </script>
 
-  <script src="js/app.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/all.min.js"></script>
-    <script src="js/script.js"></script>
+  <script src="public/js/app.js"></script>
+    <script src="public/js/bootstrap.bundle.min.js"></script>
+    <script src="public/js/all.min.js"></script>
+    <script src="public/js/script.js"></script>
 
 
 
