--- a/nav.html
+++ b/nav.html
@@ -2,18 +2,18 @@
     <!-- NAVBAR -->
     <nav>
         <i class='bx bx-menu' ></i>
-        <a href="#" class="nav-link">القائمة</a>
+        <a href="public/#" class="nav-link">القائمة</a>
         
         <input type="checkbox" id="switch-mode" hidden>
         <label for="switch-mode" class="switch-mode"></label>
-        <!-- <a href="#" class="notification">
+        <!-- <a href="public/#" class="notification">
             <i class='bx bxs-bell' ></i>
             <span class="num">8</span>
         </a> -->
-        <a href="prof.html" class="profile">
-            <img src="img/people.png" id="admin-img">
+        <a href="public/prof.html" class="profile">
+            <img src="public/img/people.png" id="admin-img">
         </a>
     </nav>
     <!-- NAVBAR -->
  
-    <script src="js/script.js"></script>
+    <script src="public/js/script.js"></script>
