--- a/sidebar.html
+++ b/sidebar.html
@@ -2,26 +2,26 @@
 <!-- SIDEBAR -->
 
  
-    <a href="#" class="brand">
+    <a href="public/#" class="brand">
         <i class='bx bxs-smile'></i>
         <span class="text">المدير </span>
     </a>
     <ul class="side-menu top">
         <li class="active" >
-            <a href="index.html">
+            <a href="public/index.html">
                 <i class='bx bxs-dashboard' ></i>
                 <span class="text">لوحة التحكم </span>
             </a>
         </li>
         
         <li>
-            <a href="medicine/proj.html">
+            <a href="public/medicine/proj.html">
                 <i class='bx bx-donate-blood'></i>
                 <span class="text">الادوية</span>
             </a>
         </li>
         <li>
-            <a href="employee/request.html">
+            <a href="public/employee/request.html">
                 <i class='bx bxs-message-dots' ></i>
                 <span class="text">الطلبات </span>
             </a>
@@ -31,13 +31,13 @@
     <ul class="side-menu">
        
         <li>
-            <a href="prof.html">
+            <a href="public/prof.html">
                 <i class='bx bxs-cog' ></i>
                 <span class="text">الملف الشخصي</span>
             </a>
         </li>
         <li>
-            <a href="account/loginInside.html" class="logout">
+            <a href="public/account/loginInside.html" class="logout">
                 <i class='bx bxs-log-out-circle' ></i>
                 <span class="text">تسجيل الخروج</span>
             </a>
@@ -46,4 +46,4 @@
  
  
  
-<script src="js/script.js"></script>
+<script src="public/js/script.js"></script>
