--- a/headerproject.html
+++ b/headerproject.html
@@ -5,8 +5,8 @@
 	<!-- Boxicons -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
-	<link rel="stylesheet" href="public/css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
  
-	<title>AdminHub</title>
+	<title>  إدارة المستودع</title>
 </head>
-<script src="public/js/script.js"></script>
+<script src="/js/script.js"></script>
