--- a/sidebar.html
+++ b/sidebar.html
@@ -8,7 +8,7 @@
     </a>
     <ul class="side-menu top">
         <li class="active" >
-            <a href="/index.html">
+            <a href="/home.html">
                 <i class='bx bxs-dashboard' ></i>
                 <span class="text">لوحة التحكم </span>
             </a>
