--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       <div class="overlay">
         <div class="overlay-panel overlay-left">
           <h1>مرحباً بك مجدداً </h1>
-          <p>Login</p>
-          <button class="ghost" id="signIn">دخول</button>
+          <p></p>
+          <button class="ghost" id="signIn" > تسجيل الدخول </button>
         </div>
         <div class="overlay-panel overlay-right">
           <h1>مرحباً بك </h1>
-          <p> SignUp </p>
-          <button class="ghost" id="signUp">خروج</button>
+         <p></p>
+          <button class="ghost" id="signUp">الدخول</button>
         </div>
       </div>
     </div>
