--- a/medicine/addMedicine.html
+++ b/medicine/addMedicine.html
@@ -53,13 +53,13 @@
               
 
                 <div class="rr " style="margin-right: 20px;">
-                    <label for="name">اسم الداء:</label>
+                    <label for="name">اسم الداوء:</label>
                     <input dir="rtl" type="text" id="nameInput">
                     <span id="nameError" class="error-message"></span>
 
                 </div>
                 <div class="rr " style="margin-right: 20px;">
-                    <label for="name">تصنيف الداء :</label>
+                    <label for="name">تصنيف الداوء :</label>
                     <input dir="rtl" type="text" id="classInput">
                     <span id="classError" class="error-message"></span>
 
