--- a/sidebar.html
+++ b/sidebar.html
@@ -37,7 +37,7 @@
             </a>
         </li>
         <li>
-            <a href="/account/loginInside.html" class="logout">
+            <a href="index.html" onclick="logout()" class="logout">
                 <i class='bx bxs-log-out-circle' ></i>
                 <span class="text">تسجيل الخروج</span>
             </a>
@@ -47,3 +47,5 @@
  
  
 <script src="/js/script.js"></script>
+<script src="js/account/login.js">     
+</script>
