--- a/sidebar.html
+++ b/sidebar.html
@@ -21,7 +21,7 @@
             </a>
         </li>
         <li>
-            <a href="/employee/request.html">
+            <a href="/request.html">
                 <i class='bx bxs-message-dots' ></i>
                 <span class="text">الطلبات </span>
             </a>
@@ -31,13 +31,13 @@
     <ul class="side-menu">
        
         <li>
-            <a href="/prof.html">
+            <a href="/profile.html">
                 <i class='bx bxs-cog' ></i>
                 <span class="text">الملف الشخصي</span>
             </a>
         </li>
         <li>
-            <a href="index.html" onclick="logout()" class="logout">
+            <a href="/index.html" onclick="logout()" class="logout">
                 <i class='bx bxs-log-out-circle' ></i>
                 <span class="text">تسجيل الخروج</span>
             </a>
@@ -47,5 +47,5 @@
  
  
 <script src="/js/script.js"></script>
-<script src="js/account/login.js">     
+<script src="/js/account/login.js">     
 </script>
