--- a/medicine/updateproj.html
+++ b/medicine/updateproj.html
@@ -48,13 +48,13 @@
               
 
                 <div class="rr " style="margin-right: 20px;">
-                    <label for="name">اسم الداء:</label>
+                    <label for="name">اسم الدواء:</label>
                     <input dir="rtl" type="text" id="nameInput">
                     <span id="nameError" class="error-message"></span>
 
                 </div>
                 <div class="rr " style="margin-right: 20px;">
-                    <label for="name">تصنيف الداء :</label>
+                    <label for="name">تصنيف الدواء :</label>
                     <input dir="rtl" type="text" id="classInput">
                     <span id="classError" class="error-message"></span>
 
