--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 
 
   </body>
-<script src="js/account/login.js"></script>
+<script src="/js/account/login.js"></script>
 <script>
  
 </script>
 
-  <script src="js/app.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/all.min.js"></script>
-    <script src="js/script.js"></script>
+  <script src="/js/app.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/all.min.js"></script>
+    <script src="/js/script.js"></script>
 
 
 
