--- a/sidebar.html
+++ b/sidebar.html
@@ -4,24 +4,24 @@
  
     <a href="#" class="brand">
         <i class='bx bxs-smile'></i>
-        <span class="text">المدير </span>
+        <span class="text">المستودع </span>
     </a>
     <ul class="side-menu top">
-        <li class="active" >
+        <li>
             <a href="/home.html">
                 <i class='bx bxs-dashboard' ></i>
                 <span class="text">لوحة التحكم </span>
             </a>
         </li>
         
-        <li>
+        <li >
             <a href="/medicine/proj.html">
                 <i class='bx bx-donate-blood'></i>
                 <span class="text">الادوية</span>
             </a>
         </li>
         <li>
-            <a href="/request.html">
+            <a href="/request/request.html">
                 <i class='bx bxs-message-dots' ></i>
                 <span class="text">الطلبات </span>
             </a>
