--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
             <i class='bx bxs-bell' ></i>
             <span class="num">8</span>
         </a> -->
-        <a href="/prof.html" class="profile">
+        <a href="/profile.html" class="profile">
             <img src="/img/people.png" id="admin-img">
         </a>
     </nav>
