--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 
-<html lang="en">
+<html lang="ar">
 <link rel="stylesheet" href="/css/alert.css">
 <!-- HEADER -->
 <div id="header-placeholder"></div>
