--- a/request/request.html
+++ b/request/request.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 	<link rel="stylesheet" href="/css/alert.css">
 <!-- HEADER -->
 <div id="header-placeholder"></div>
