--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 
 <html lang="ar">
+	<meta charset="UTF-8">
 <link rel="stylesheet" href="/css/alert.css">
 <!-- HEADER -->
 <div id="header-placeholder"></div>
