--- a/medicine/updateproj.html
+++ b/medicine/updateproj.html
@@ -50,12 +50,19 @@
                 <div class="rr " style="margin-right: 20px;">
                     <label for="name">اسم الدواء:</label>
                     <input dir="rtl" type="text" id="nameInput">
+                    
                     <span id="nameError" class="error-message"></span>
 
                 </div>
                 <div class="rr " style="margin-right: 20px;">
                     <label for="name">تصنيف الدواء :</label>
-                    <input dir="rtl" type="text" id="classInput">
+                    <select name="cars" id="classifictions">
+                        <option value="default">اختر تصنيف</option>
+                        <option value="option1">option 1</option>
+                        <option value="option2">option 2</option>
+                        <option value="option3">option 3</option>
+                        <option value="option4">option 4</option>
+                      </select>
                     <span id="classError" class="error-message"></span>
 
                 </div>
