--- a/nav.html
+++ b/nav.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-    <!-- NAVBAR -->
-    <nav>
-        <i class='bx bx-menu' ></i>
-        <a href="#" class="nav-link">القائمة</a>
-        
-        <input type="checkbox" id="switch-mode" hidden>
-        <label for="switch-mode" class="switch-mode"></label>
-        <!-- <a href="#" class="notification">
-            <i class='bx bxs-bell' ></i>
-            <span class="num">8</span>
-        </a> -->
-        <a href="/profile.html" class="profile">
-            <img src="/img/people.png" id="admin-img">
-        </a>
-    </nav>
-    <!-- NAVBAR -->
+<!-- NAVBAR -->
+<nav>
+    <i class='bx bx-menu'></i>
+    <a href="#" class="nav-link">القائمة</a>
+    
+    <input type="checkbox" id="switch-mode" hidden>
+    <label for="switch-mode" class="switch-mode"></label>
+
+    <!-- Profile -->
+    <a href="/profile.html" class="profile">
+        <img src="/img/people.png" id="admin-img">
+    </a>
+</nav>
+<!-- NAVBAR -->
+
+<script src="/js/script.js"></script>
  
-    <script src="/js/script.js"></script>
