--- a/medicine/updateproj.html
+++ b/medicine/updateproj.html
@@ -58,10 +58,10 @@
                     <label for="name">تصنيف الدواء :</label>
                     <select name="cars" id="classifictions">
                         <option value="default">اختر تصنيف</option>
-                        <option value="option1">option 1</option>
-                        <option value="option2">option 2</option>
-                        <option value="option3">option 3</option>
-                        <option value="option4">option 4</option>
+                        <option value="حبوب"> حبوب</option>
+                        <option value="شراب"> شراب</option>
+                        <option value="تحاميل">تحاميل</option>
+                        
                       </select>
                     <span id="classError" class="error-message"></span>
 
